--- a/index.html
+++ b/index.html
@@ -680,7 +680,8 @@
                 name: "Pdf Buku Mina No Nihongo ll Edisi 2",
                 price: 17000,
                 category: "buku",
-                image: "https://files.catbox.moe/63sa2k.jpg"
+                image: "https://files.catbox.moe/63sa2k.jpg",
+                badge: "cocok buat pemula belajar bahasa jepang"
             },
             {
                 id: 8,
