--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://picsum.photos/seed/hero/600/400" alt="Hero" class="img-fluid rounded-4 shadow-lg">
+                    <img src="https://files.catbox.moe/3g19r5.jpg" alt="Hero" class="img-fluid rounded-4 shadow-lg">
                 </div>
             </div>
         </div>
